Works good using nested store.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(forecast)
 export(grid_parameter_points)
 export(move)
 export(random_parameter_points)
+export(random_parameter_trees)
 export(replicates)
 export(store)
 export(store_all)
+export(tree_apply)
