Remake documentation, fix doc erors and function duplicates, paramter trees stuff is still ill-defined, parameter-points are better, added digest as dependency but it helps with sim id issues.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Description: A basic simulation framework that allows writing simulation code in
     uses basic R features and sets up simulation in environments
     isolated from .GlobalEnv.  
 License: GPL-3
+Depends:
+    digest
 Suggests:
     testthat
 RoxygenNote: 5.0.1
